gcc/testsuite/rust/rustc/ui/parser/removed-syntax-uniq-mut-ty.rs
type mut_box = Box<mut isize>;
// { dg-error "" "" { target *-*-* } .-1 }

